fixes: some layout bugs were fixed

--- a/src/components/layout/footer/styles/footer@media.scss
+++ b/src/components/layout/footer/styles/footer@media.scss
@@ -104,8 +104,8 @@
 }
 @media screen and (max-width: 428px) {
   .container-footer {
-    margin: 0px 0 0 0;
-    padding: 0px;
+    margin: 100px 0 0 0;
+    padding: 20px 0 0 0;
     border-top: 2px solid white;
 
     .footer-content {
