--- a/src/components/views/contact-me/styles/contactMe.scss
+++ b/src/components/views/contact-me/styles/contactMe.scss
@@ -8,7 +8,7 @@
   background-color: transparent;
   box-shadow: 0 0 15px black;
   border-radius: 15px;
-  margin: 50px 0;
+  margin: 50px auto;
   padding: 50px;
   overflow: hidden;
   width: 70vw;
