--- a/src/components/views/contact-me/styles/contactMe@media.scss
+++ b/src/components/views/contact-me/styles/contactMe@media.scss
@@ -481,7 +481,7 @@
     background-color: transparent;
     box-shadow: 0 0 15px black;
     border-radius: 15px;
-    margin: 0px 0 !important;
+    margin: 0 auto !important;
     padding: 30px !important;
     overflow: hidden;
     width: 70vw;
