--- a/src/components/views/cv/styles/cv.scss
+++ b/src/components/views/cv/styles/cv.scss
@@ -6,7 +6,7 @@
   background-color: transparent;
   box-shadow: 0 0 15px black;
   border-radius: 15px;
-  margin: 50px 0;
+  margin: 50px auto;
   padding: 20px 20px 40px;
   overflow: hidden;
 
