--- a/src/components/views/web-portfolio/styles/webPortfolio.scss
+++ b/src/components/views/web-portfolio/styles/webPortfolio.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0px;
+    margin: 0px auto;
 
     .container-title{
         width: 100%;
