--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,8 @@ a:hover {
 body {
   padding-top: 20vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: column ;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
